# Dolbotx-6WD-ros-control

./: .gitattributes  .gitignore  README.md
Arduino/DolbotX_Wheel_Control/: DolbotX_Wheel_Control.ino
Arduino/LED_Control/: LED_Control.ino
Arduino/LEFT_MOTOR_FINAL/: LEFT_MOTOR_FINAL.ino
Arduino/RIGHT_MOTOR_FINAL/: RIGHT_MOTOR_FINAL.ino
src/led_serial_bridge/: package.xml  setup.cfg  setup.py
src/led_serial_bridge/led_serial_bridge/: led_serial_bridge.py
src/object_follower/: package.xml  setup.py
src/object_follower/config/: follower.yaml
src/object_follower/launch/: follower.launch.py
src/object_follower/object_follower/: follower_node.py
src/serial_bridge/: package.xml  setup.py
src/serial_bridge/serial_bridge/: serial_bridge_node.py
src/steering_to_diff/: package.xml  setup.cfg  setup.py
src/steering_to_diff/config/: params.yaml
src/steering_to_diff/launch/: steering_to_diff.launch.py
src/steering_to_diff/steering_to_diff/: steering_to_diff_node.py
src/wheel_serial_bridge/: package.xml  setup.cfg  setup.py
src/wheel_serial_bridge/config/: params.yaml
src/wheel_serial_bridge/launch/: bridge.launch.py
src/wheel_serial_bridge/wheel_serial_bridge/: bridge_unified.py
