<?xml version="1.0"?>
<package format="3">
  <name>steering_to_diff</name>
  <version>0.1.0</version>
  <description>Steering angle(Float64) → left/right wheel speeds(Float32) for skid/diff drive (ROS 2 Humble).</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
