<?xml version="1.0"?>
<package format="3">
  <name>wheel_serial_bridge</name>
  <version>0.1.0</version>
  <description>Send /cmd_vel_left/right to Arduino over serial and read feedback.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- pyserial은 pip로 설치 권장 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

